# max-rs

./: README.md
max32655/examples/max32655-gpio/: Cargo.toml
max32655/examples/max32655-gpio/src/: main.rs
max32655/max32655-hal/: Cargo.toml
max32655/max32655-hal/src/: adc.rs  aes.rs  common.rs  crc.rs  delay.rs  gcr.rs  gpio.rs  lib.rs  lp.rs  mxc_error.rs  sys.rs  uart.rs
max32655/max32655_pac/: Cargo.toml  Makefile  device.x
max32655/max32655_pac/src/: adc.rs  aes.rs  aeskeys.rs  crc.rs  dma.rs  dvs.rs  fcr.rs  flc.rs  gcfr.rs  gcr.rs  gpio0.rs  i2c0.rs  i2s.rs  icc0.rs  lib.rs  lpcmp.rs  lpgcr.rs  mcr.rs  owm.rs  pt.rs  ptg.rs  pwrseq.rs  rtc.rs  sema.rs  simo.rs  sir.rs  spi0.rs  tmr.rs  trimsir.rs  trng.rs  uart.rs  wdt.rs  wut.rs
max32655/max32655_pac/src/adc/: ctrl.rs  data.rs  intr.rs  limit.rs  status.rs
max32655/max32655_pac/src/aes/: ctrl.rs  fifo.rs  inten.rs  intfl.rs  status.rs
max32655/max32655_pac/src/aeskeys/: key0.rs  key1.rs  key2.rs  key3.rs  key4.rs  key5.rs  key6.rs  key7.rs
max32655/max32655_pac/src/crc/: ctrl.rs  datain16.rs  datain32.rs  datain8.rs  poly.rs  val.rs
max32655/max32655_pac/src/dma/: ch.rs  inten.rs  intfl.rs
max32655/max32655_pac/src/dvs/: adj_dwn.rs  adj_up.rs  ctl.rs  direct.rs  mon.rs  stat.rs  tap_sel.rs  thres_cmp.rs
max32655/max32655_pac/src/fcr/: autocal0.rs  autocal1.rs  autocal2.rs  erfo_inten.rs  erfo_intfl.rs  erfoks.rs  fctrl0.rs  urvbootaddr.rs  urvctrl.rs
max32655/max32655_pac/src/flc/: actrl.rs  addr.rs  clkdiv.rs  ctrl.rs  data.rs  eccdata.rs  intr.rs  rlr0.rs  rlr1.rs  welr0.rs  welr1.rs
max32655/max32655_pac/src/gcfr/: reg0.rs  reg1.rs
max32655/max32655_pac/src/gcr/: btleldoctrl.rs  btleldodly.rs  clkctrl.rs  eccaddr.rs  eccced.rs  eccerr.rs  eccie.rs  eventen.rs  gpr.rs  memctrl.rs  memz.rs  pclkdis0.rs  pclkdis1.rs  pclkdiv.rs  pm.rs  revision.rs  rst0.rs  rst1.rs  sysctrl.rs  sysie.rs  sysst.rs
max32655/max32655_pac/src/gpio0/: ds0.rs  ds1.rs  dualedge.rs  en0.rs  en0_clr.rs  (+31 more)
(+175 files in other folders)
